--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "display": "standalone",
     "icons": [
         {
-            "src": "assets/img/spotem.png",
+            "src": "apple-touch-icon.png",
             "sizes": "180x180",
             "type": "image/png"
         }
